css/main.css
@font-face {
  font-family: 'komika';
  src: url('Komika_display.ttf') format('truetype');
}

@font-face {
  font-family: 'bebas';
  src: url('bebas.ttf') format('truetype');
}

body {
  background: #ddd !important;
  color: #fff !important;
}

.header {
  background: url(../img/marvel-logo.svg) no-repeat;
  width: 100%;
  background-color: #F0141E;
  background-size: contain;
  height: 150px; 
}

.info-holder {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.info-holder > img {
  max-width: 100%;
  margin: 10px;
}

.info {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  flex-basis: 50%;
  margin: 10px;
}

.info > h1 {
  font-family: bebas;
  background: #f0141e;
  letter-spacing: -0.05em;
  word-spacing: 0.3em;
  padding: 8px;
}

.info > h3 {
  border: 4px solid #333;
  background: #ff9;
  font-size: 24px;
  padding: 5px;
  font-family: komika;
  color: #333;
}

.card {
  background: #eee;
  margin: 5px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
  width: 250px;
  height: 380px;
}

.card > img {
  width: 100%;
  padding: 5px;
}

.card > p {
  font-family: 'komika';
  display: table;
  padding: 5px;
  position: relative;
  margin: 5px;
  margin-top: -23%;
  border: 2px solid #111;
  color: #111;
  background: #bbb; p 
}

.text-card {
  background: #eee;
  margin: 5px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
  width: 250px;
}

.text-card > p {
  font-family: 'komika';
  padding: 5px;
  border: 2px solid #111;
  color: #111;
  background: #bbb; p 
}

.card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.content-holder {
  padding-top: 7.16em;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around; 
}

.content-holder > h1 {
  font-family: bebas;
  color: #f0141e;
  letter-spacing: -0.05em;
  word-spacing: 0.5em;
  width: 100%;
  margin: 5px 0 0 10px;
}

.content-holder > h2 {
  font-family: bebas;
  letter-spacing: -0.05em;
  background: #f0141e;
  width: 100%;
  padding: 10px; 
  margin: 10px;
}

#characters, #events, #comics, #creators, #series {
  height: 0px;
  overflow: hidden;
}

.spinner{
  position: fixed;
  margin: auto;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border: 16px solid #f3f3f3; /* Light grey */
  border-top: 16px solid #3498db; /* Blue */
  border-radius: 50%;
  width: 120px;
  height: 120px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.material-icons {
  float: right;
  margin-top: 5px;
}

#navbar {
  padding: 0;
  background: #F0141E;
}

#navbar > ul.nav {
  float: right;
  margin-top: 54px;
  margin-right: 3px;
}

.nav.navbar-nav > li {
  font-family: 'komika';
  border: 1px solid #111;
  margin: 7px;
  background: #bbb;
}

li > a {
  color: #111 !important;
  padding: 5px 10px !important;
}

.navbar.m-nav {
  margin: 0;
  width: 100%;
  position: fixed;
  border: 0;
}

.navbar-header.m-header {
  background: #f0141e;
}

.navbar-toggle {
  background: #f0141e !important;
  border-color: #fff !important;
}

.icon-bar {
  background: #fff !important;
}

#navbar.in > ul.nav {
  width: 100%;
  margin: 1px;
}

